# sapphire-timer

./: .gitignore  Cargo.toml  README.md  deny.toml  release-plz.toml
.github/workflows/: cargo-deny.yml  ci.yml
docs/config/: timer-config.toml  user-config.toml
sapphire-timer-cli/: Cargo.toml
sapphire-timer-cli/src/: main.rs
sapphire-timer-cli/src/commands/: cache.rs  init.rs  log.rs  mod.rs  preset.rs  remote.rs  search.rs  start.rs  sync.rs
sapphire-timer-core/: Cargo.toml
sapphire-timer-core/src/: error.rs  lib.rs  ops.rs  preset.rs  session.rs  timer.rs  timer_state.rs  user_config.rs
sapphire-timer-core/tests/: example_configs.rs
