[workspace]
members = [
    "sapphire-timer-cli",
    "sapphire-timer-core",
]
resolver = "3"

[workspace.package]
description = "Preset-based timer that keeps your data alive as plain text - timeless like fossils"
license = "MIT OR Apache-2.0"
repository = "https://github.com/fluo10/sapphire-timer"
edition = "2024"

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
dirs = "5"
indexmap = { version = "2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "1.1"
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.dev.package."*"]
opt-level = 1
